# order-bot

./: README.md  discordbot.py  pyproject.toml  requirements.txt  test.py
